--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "parcel:dev": "rm -rf ./build && parcel serve --dist-dir ./build --port 3001 --open --lazy",
     "parcel:prod": "rm -rf ./build && parcel build --dist-dir ./build",
     "server:dev": "nodemon",
-    "server:prod": "cross-env MODE=production PORT=3000 ts-node -T server/app.ts",
+    "server:prod": "cross-env MODE=production PORT=3000 ts-node --esm -T server/app.ts",
     "clear": "rm -rf .parcel-cache"
   },
   "keywords": [
