--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "template",
+  "name": "web-app-editor",
   "version": "1.0.0",
-  "description": "Parcel+React+TypeScript+Express template",
+  "description": "Web editor for web apps",
   "source": "src/index.html",
   "type": "module",
   "exports": {
@@ -32,7 +32,7 @@
     "@types/node": "^18.17.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
-    "@types/ws": "^8.5.5",
+    "@types/react-redux": "^7.1.26",
     "buffer": "^5.7.1",
     "cross-env": "^7.0.3",
     "ip": "^1.1.8",
@@ -42,14 +42,16 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.0.8",
+    "@dnd-kit/sortable": "^7.0.2",
     "@reduxjs/toolkit": "^1.9.3",
     "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.2",
     "react-router-dom": "^6.8.1",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
-    "ts-node": "^10.9.1",
-    "ws": "^8.13.0"
+    "ts-node": "^10.9.1"
   }
 }
